--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -66,11 +66,11 @@ TESTS =
 BENCHMARKS =
 
 if BUILD_BITCOIND
-  bin_PROGRAMS += dogecoind
+  bin_PROGRAMS += dogecoind poemd
 endif
 
 if BUILD_BITCOIN_UTILS
-  bin_PROGRAMS += dogecoin-cli dogecoin-tx
+  bin_PROGRAMS += dogecoin-cli poem-cli dogecoin-tx poem-tx
 endif
 
 .PHONY: FORCE check-symbols check-security
