Complete PoEM rebranding
- Renamed core binaries from dogecoin* to poem*
- Updated version strings and branding to PoEM Core
- Modified build system for new binary names
- Updated documentation and help text
- Maintained backward compatibility with existing data directories

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,23 +24,23 @@ BITCOIN_INCLUDES=-I$(builddir) -I$(builddir)/obj $(BDB_CPPFLAGS) $(BOOST_CPPFLAG
 BITCOIN_INCLUDES += -I$(srcdir)/secp256k1/include
 BITCOIN_INCLUDES += $(UNIVALUE_CFLAGS)
 
-LIBBRRRCOIN_SERVER=libdogecoin_server.a
-LIBBRRRCOIN_COMMON=libdogecoin_common.a
-LIBBRRRCOIN_CONSENSUS=libdogecoin_consensus.a
-LIBBRRRCOIN_CLI=libdogecoin_cli.a
-LIBBRRRCOIN_UTIL=libdogecoin_util.a
-LIBBRRRCOIN_CRYPTO=crypto/libdogecoin_crypto.a
-LIBBRRRCOINQT=qt/libdogecoinqt.a
+LIBBRRRFREN_SERVER=libbrrrfren_server.a
+LIBBRRRFREN_COMMON=libbrrrfren_common.a
+LIBBRRRFREN_CONSENSUS=libbrrrfren_consensus.a
+LIBBRRRFREN_CLI=libbrrrfren_cli.a
+LIBBRRRFREN_UTIL=libbrrrfren_util.a
+LIBBRRRFREN_CRYPTO=crypto/libbrrrfren_crypto.a
+LIBBRRRFRENQT=qt/libbrrrfrenqt.a
 LIBSECP256K1=secp256k1/libsecp256k1.la
 
 if ENABLE_ZMQ
-LIBBRRRCOIN_ZMQ=libdogecoin_zmq.a
+LIBBRRRFREN_ZMQ=libbrrrfren_zmq.a
 endif
 if BUILD_BITCOIN_LIBS
-LIBBRRRCOINCONSENSUS=libdogecoinconsensus.la
+LIBBRRRFRENCONSENSUS=libbrrrfrenconsensus.la
 endif
 if ENABLE_WALLET
-LIBBRRRCOIN_WALLET=libdogecoin_wallet.a
+LIBBRRRFREN_WALLET=libbrrrfren_wallet.a
 endif
 
 $(LIBSECP256K1): $(wildcard secp256k1/src/*) $(wildcard secp256k1/include/*)
@@ -49,16 +49,16 @@ $(LIBSECP256K1): $(wildcard secp256k1/src/*) $(wildcard secp256k1/include/*)
 # Make is not made aware of per-object dependencies to avoid limiting building parallelization
 # But to build the less dependent modules first, we manually select their order here:
 EXTRA_LIBRARIES += \
-  $(LIBBRRRCOIN_CRYPTO) \
-  $(LIBBRRRCOIN_UTIL) \
-  $(LIBBRRRCOIN_COMMON) \
-  $(LIBBRRRCOIN_CONSENSUS) \
-  $(LIBBRRRCOIN_SERVER) \
-  $(LIBBRRRCOIN_CLI) \
-  $(LIBBRRRCOIN_WALLET) \
-  $(LIBBRRRCOIN_ZMQ)
+  $(LIBBRRRFREN_CRYPTO) \
+  $(LIBBRRRFREN_UTIL) \
+  $(LIBBRRRFREN_COMMON) \
+  $(LIBBRRRFREN_CONSENSUS) \
+  $(LIBBRRRFREN_SERVER) \
+  $(LIBBRRRFREN_CLI) \
+  $(LIBBRRRFREN_WALLET) \
+  $(LIBBRRRFREN_ZMQ)
 
-lib_LTLIBRARIES = $(LIBBRRRCOINCONSENSUS)
+lib_LTLIBRARIES = $(LIBBRRRFRENCONSENSUS)
 
 bin_PROGRAMS =
 noinst_PROGRAMS =
@@ -66,11 +66,11 @@ TESTS =
 BENCHMARKS =
 
 if BUILD_BITCOIND
-  bin_PROGRAMS += dogecoind poemd
+  bin_PROGRAMS += poemd
 endif
 
 if BUILD_BITCOIN_UTILS
-  bin_PROGRAMS += dogecoin-cli poem-cli dogecoin-tx poem-tx
+  bin_PROGRAMS += poem-cli poem-tx
 endif
 
 .PHONY: FORCE check-symbols check-security
@@ -100,10 +100,10 @@ BITCOIN_CORE_H = \
   core_io.h \
   core_memusage.h \
   cuckoocache.h \
-  dogecoin.cpp \
-  dogecoin.h \
-  dogecoin-fees.cpp \
-  dogecoin-fees.h \
+  brrrfren.cpp \
+  brrrfren.h \
+  brrrfren-fees.cpp \
+  brrrfren-fees.h \
   fs.h \
   httprpc.h \
   httpserver.h \
@@ -184,12 +184,12 @@ obj/build.h: FORCE
 	@$(MKDIR_P) $(builddir)/obj
 	@$(top_srcdir)/share/genbuild.sh $(abs_top_builddir)/src/obj/build.h \
 	  $(abs_top_srcdir)
-libdogecoin_util_a-clientversion.$(OBJEXT): obj/build.h
+libbrrrfren_util_a-clientversion.$(OBJEXT): obj/build.h
 
 # server: shared between bitcoind and bitcoin-qt
-libdogecoin_server_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(MINIUPNPC_CPPFLAGS) $(EVENT_CFLAGS) $(EVENT_PTHREADS_CFLAGS)
-libdogecoin_server_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_server_a_SOURCES = \
+libbrrrfren_server_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(MINIUPNPC_CPPFLAGS) $(EVENT_CFLAGS) $(EVENT_PTHREADS_CFLAGS)
+libbrrrfren_server_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_server_a_SOURCES = \
   addrman.cpp \
   addrdb.cpp \
   bloom.cpp \
@@ -230,9 +230,9 @@ libdogecoin_server_a_SOURCES = \
   $(BITCOIN_CORE_H)
 
 if ENABLE_ZMQ
-libdogecoin_zmq_a_CPPFLAGS = $(BITCOIN_INCLUDES) $(ZMQ_CFLAGS)
-libdogecoin_zmq_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_zmq_a_SOURCES = \
+libbrrrfren_zmq_a_CPPFLAGS = $(BITCOIN_INCLUDES) $(ZMQ_CFLAGS)
+libbrrrfren_zmq_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_zmq_a_SOURCES = \
   zmq/zmqabstractnotifier.cpp \
   zmq/zmqnotificationinterface.cpp \
   zmq/zmqpublishnotifier.cpp
@@ -241,9 +241,9 @@ endif
 
 # wallet: shared between bitcoind and bitcoin-qt, but only linked
 # when wallet enabled
-libdogecoin_wallet_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-libdogecoin_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_wallet_a_SOURCES = \
+libbrrrfren_wallet_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+libbrrrfren_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_wallet_a_SOURCES = \
   wallet/crypter.cpp \
   wallet/db.cpp \
   wallet/rpcdump.cpp \
@@ -255,9 +255,9 @@ libdogecoin_wallet_a_SOURCES = \
   $(BITCOIN_CORE_H)
 
 # crypto primitives library
-crypto_libdogecoin_crypto_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_CONFIG_INCLUDES)
-crypto_libdogecoin_crypto_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-crypto_libdogecoin_crypto_a_SOURCES = \
+crypto_libbrrrfren_crypto_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_CONFIG_INCLUDES)
+crypto_libbrrrfren_crypto_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+crypto_libbrrrfren_crypto_a_SOURCES = \
   crypto/aes.cpp \
   crypto/aes.h \
   crypto/chacha20.h \
@@ -280,13 +280,13 @@ crypto_libdogecoin_crypto_a_SOURCES = \
 
 # only include SSE2 scrypt sources if USE_SCRYPT_SSE2 is defined
 if USE_SCRYPT_SSE2
-crypto_libdogecoin_crypto_a_SOURCES += crypto/scrypt-sse2.cpp
+crypto_libbrrrfren_crypto_a_SOURCES += crypto/scrypt-sse2.cpp
 endif
 
 # consensus: shared between all executables that validate any consensus rules.
-libdogecoin_consensus_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-libdogecoin_consensus_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_consensus_a_SOURCES = \
+libbrrrfren_consensus_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+libbrrrfren_consensus_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_consensus_a_SOURCES = \
   amount.h \
   arith_uint256.cpp \
   arith_uint256.h \
@@ -322,9 +322,9 @@ libdogecoin_consensus_a_SOURCES = \
   version.h
 
 # common: shared between bitcoind, and bitcoin-qt and non-server tools
-libdogecoin_common_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-libdogecoin_common_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_common_a_SOURCES = \
+libbrrrfren_common_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+libbrrrfren_common_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_common_a_SOURCES = \
   amount.cpp \
   arith_uint256.cpp \
   auxpow.cpp \
@@ -352,9 +352,9 @@ libdogecoin_common_a_SOURCES = \
 # util: shared between all executables.
 # This library *must* be included to make sure that the glibc
 # backward-compatibility objects and their sanity checks are linked.
-libdogecoin_util_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-libdogecoin_util_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_util_a_SOURCES = \
+libbrrrfren_util_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+libbrrrfren_util_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_util_a_SOURCES = \
   support/lockedpool.cpp \
   chainparamsbase.cpp \
   clientversion.cpp \
@@ -375,120 +375,79 @@ libdogecoin_util_a_SOURCES = \
 
 if GLIBC_BACK_COMPAT
 
-libdogecoin_util_a_SOURCES += compat/glibc_compat.cpp
+libbrrrfren_util_a_SOURCES += compat/glibc_compat.cpp
 AM_LDFLAGS += $(COMPAT_LDFLAGS)
 
 endif
 
 # cli: shared between bitcoin-cli and bitcoin-qt
-libdogecoin_cli_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-libdogecoin_cli_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-libdogecoin_cli_a_SOURCES = \
+libbrrrfren_cli_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+libbrrrfren_cli_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfren_cli_a_SOURCES = \
   rpc/client.cpp \
   $(BITCOIN_CORE_H)
 
-nodist_libdogecoin_util_a_SOURCES = $(srcdir)/obj/build.h
+nodist_libbrrrfren_util_a_SOURCES = $(srcdir)/obj/build.h
 #
 
-# bitcoind binary #
-dogecoind_SOURCES = bitcoind.cpp
-dogecoind_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-dogecoind_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-dogecoind_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
-
 # poemd binary (PoEM daemon) #
-poemd_SOURCES = $(dogecoind_SOURCES)
-poemd_CPPFLAGS = $(dogecoind_CPPFLAGS) -D'BITCOIN_DAEMON_NAME=\"poemd\"'
-poemd_CXXFLAGS = $(dogecoind_CXXFLAGS)
-poemd_LDFLAGS = $(dogecoind_LDFLAGS)
-poemd_LDADD = $(dogecoind_LDADD)
-
-if TARGET_WINDOWS
-dogecoind_SOURCES += bitcoind-res.rc
-endif
-
-dogecoind_LDADD = \
-  $(LIBBRRRCOIN_SERVER) \
-  $(LIBBRRRCOIN_COMMON) \
+poemd_SOURCES = bitcoind.cpp
+poemd_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) -D'BITCOIN_DAEMON_NAME=\"poemd\"'
+poemd_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+poemd_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+poemd_LDADD = $(LIBBRRRFREN_SERVER) \
+  $(LIBBRRRFREN_COMMON) \
   $(LIBUNIVALUE) \
-  $(LIBBRRRCOIN_UTIL) \
-  $(LIBBRRRCOIN_WALLET) \
-  $(LIBBRRRCOIN_ZMQ) \
-  $(LIBBRRRCOIN_CONSENSUS) \
-  $(LIBBRRRCOIN_CRYPTO) \
+  $(LIBBRRRFREN_UTIL) \
+  $(LIBBRRRFREN_WALLET) \
+  $(LIBBRRRFREN_ZMQ) \
+  $(LIBBRRRFREN_CONSENSUS) \
+  $(LIBBRRRFREN_CRYPTO) \
   $(LIBLEVELDB) \
   $(LIBMEMENV) \
   $(LIBSECP256K1)
 
-dogecoind_LDADD += $(BOOST_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(ZMQ_LIBS)
-
-# bitcoin-cli binary #
-dogecoin_cli_SOURCES = bitcoin-cli.cpp
-dogecoin_cli_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(EVENT_CFLAGS)
-dogecoin_cli_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-dogecoin_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+poemd_LDADD += $(BOOST_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(ZMQ_LIBS)
 
 # poem-cli binary (PoEM CLI) #
-poem_cli_SOURCES = $(dogecoin_cli_SOURCES)
-poem_cli_CPPFLAGS = $(dogecoin_cli_CPPFLAGS)
-poem_cli_CXXFLAGS = $(dogecoin_cli_CXXFLAGS)
-poem_cli_LDFLAGS = $(dogecoin_cli_LDFLAGS)
-poem_cli_LDADD = $(dogecoin_cli_LDADD)
-
-if TARGET_WINDOWS
-dogecoin_cli_SOURCES += bitcoin-cli-res.rc
-endif
-
-dogecoin_cli_LDADD = \
-  $(LIBBRRRCOIN_CLI) \
+poem_cli_SOURCES = bitcoin-cli.cpp
+poem_cli_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(EVENT_CFLAGS)
+poem_cli_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+poem_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+poem_cli_LDADD = $(LIBBRRRFREN_CLI) \
   $(LIBUNIVALUE) \
-  $(LIBBRRRCOIN_UTIL) \
-  $(LIBBRRRCOIN_CRYPTO)
+  $(LIBBRRRFREN_UTIL) \
+  $(LIBBRRRFREN_CRYPTO)
 
-dogecoin_cli_LDADD += $(BOOST_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(EVENT_LIBS)
-#
-
-# bitcoin-tx binary #
-dogecoin_tx_SOURCES = bitcoin-tx.cpp
-dogecoin_tx_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-dogecoin_tx_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-dogecoin_tx_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+poem_cli_LDADD += $(BOOST_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(EVENT_LIBS)
 
 # poem-tx binary (PoEM transaction tool) #
-poem_tx_SOURCES = $(dogecoin_tx_SOURCES)
-poem_tx_CPPFLAGS = $(dogecoin_tx_CPPFLAGS)
-poem_tx_CXXFLAGS = $(dogecoin_tx_CXXFLAGS)
-poem_tx_LDFLAGS = $(dogecoin_tx_LDFLAGS)
-poem_tx_LDADD = $(dogecoin_tx_LDADD)
-
-if TARGET_WINDOWS
-dogecoin_tx_SOURCES += bitcoin-tx-res.rc
-endif
-
-dogecoin_tx_LDADD = \
-  $(LIBUNIVALUE) \
-  $(LIBBRRRCOIN_COMMON) \
-  $(LIBBRRRCOIN_UTIL) \
-  $(LIBBRRRCOIN_CONSENSUS) \
-  $(LIBBRRRCOIN_CRYPTO) \
+poem_tx_SOURCES = bitcoin-tx.cpp
+poem_tx_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+poem_tx_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+poem_tx_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+poem_tx_LDADD = $(LIBUNIVALUE) \
+  $(LIBBRRRFREN_COMMON) \
+  $(LIBBRRRFREN_UTIL) \
+  $(LIBBRRRFREN_CONSENSUS) \
+  $(LIBBRRRFREN_CRYPTO) \
   $(LIBSECP256K1)
 
-dogecoin_tx_LDADD += $(BOOST_LIBS) $(CRYPTO_LIBS)
-#
+poem_tx_LDADD += $(BOOST_LIBS) $(CRYPTO_LIBS)
 
 # bitcoinconsensus library #
 if BUILD_BITCOIN_LIBS
 include_HEADERS = script/bitcoinconsensus.h
-libdogecoinconsensus_la_SOURCES = $(crypto_libdogecoin_crypto_a_SOURCES) $(libdogecoin_consensus_a_SOURCES)
+libbrrrfrenconsensus_la_SOURCES = $(crypto_libbrrrfren_crypto_a_SOURCES) $(libbrrrfren_consensus_a_SOURCES)
 
 if GLIBC_BACK_COMPAT
-  libdogecoinconsensus_la_SOURCES += compat/glibc_compat.cpp
+  libbrrrfrenconsensus_la_SOURCES += compat/glibc_compat.cpp
 endif
 
-libdogecoinconsensus_la_LDFLAGS = $(AM_LDFLAGS) -no-undefined $(RELDFLAGS)
-libdogecoinconsensus_la_LIBADD = $(LIBSECP256K1)
-libdogecoinconsensus_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(builddir)/obj -I$(srcdir)/secp256k1/include -DBUILD_BITCOIN_INTERNAL
-libdogecoinconsensus_la_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+libbrrrfrenconsensus_la_LDFLAGS = $(AM_LDFLAGS) -no-undefined $(RELDFLAGS)
+libbrrrfrenconsensus_la_LIBADD = $(LIBSECP256K1)
+libbrrrfrenconsensus_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(builddir)/obj -I$(srcdir)/secp256k1/include -DBUILD_BITCOIN_INTERNAL
+libbrrrfrenconsensus_la_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 
 endif
 #
