--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -16,14 +16,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "BrrrFren"
-            VALUE "FileDescription",    "dogecoind (BrrrFren node with a JSON-RPC server)"
+            VALUE "CompanyName",        "PoEM"
+            VALUE "FileDescription",    "poemd (PoEM node with a JSON-RPC server)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "dogecoind"
+            VALUE "InternalName",       "poemd"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "dogecoind.exe"
-            VALUE "ProductName",        "dogecoind"
+            VALUE "OriginalFilename",   "poemd.exe"
+            VALUE "ProductName",        "PoEM Core"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
