--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -2,11 +2,11 @@
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
-TESTS += test/test_dogecoin
-bin_PROGRAMS += test/test_dogecoin
-noinst_PROGRAMS += test/test_dogecoin_fuzzy
+TESTS += test/test_brrrfren
+bin_PROGRAMS += test/test_brrrfren
+noinst_PROGRAMS += test/test_brrrfren_fuzzy
 TEST_SRCDIR = test
-TEST_BINARY=test/test_dogecoin$(EXEEXT)
+TEST_BINARY=test/test_brrrfren$(EXEEXT)
 
 
 EXTRA_DIST += \
@@ -96,7 +96,7 @@ BITCOIN_TESTS =\
   test/crypto_tests.cpp \
   test/cuckoocache_tests.cpp \
   test/DoS_tests.cpp \
-  test/dogecoin_tests.cpp \
+  test/brrrfren_tests.cpp \
   test/getarg_tests.cpp \
   test/hash_tests.cpp \
   test/key_tests.cpp \
@@ -150,42 +150,42 @@ BITCOIN_TESTS += \
   wallet/test/crypto_tests.cpp
 endif
 
-test_test_dogecoin_SOURCES = $(BITCOIN_TESTS) $(JSON_TEST_FILES) $(RAW_TEST_FILES)
-test_test_dogecoin_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) -I$(builddir)/test/ $(TESTDEFS) $(EVENT_CFLAGS)
-test_test_dogecoin_LDADD = $(LIBBRRRCOIN_SERVER) $(LIBBRRRCOIN_CLI) $(LIBBRRRCOIN_COMMON) $(LIBBRRRCOIN_UTIL) $(LIBBRRRCOIN_CONSENSUS) $(LIBBRRRCOIN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBMEMENV) \
+test_test_brrrfren_SOURCES = $(BITCOIN_TESTS) $(JSON_TEST_FILES) $(RAW_TEST_FILES)
+test_test_brrrfren_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) -I$(builddir)/test/ $(TESTDEFS) $(EVENT_CFLAGS)
+test_test_brrrfren_LDADD = $(LIBBRRRFREN_SERVER) $(LIBBRRRFREN_CLI) $(LIBBRRRFREN_COMMON) $(LIBBRRRFREN_UTIL) $(LIBBRRRFREN_CONSENSUS) $(LIBBRRRFREN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBMEMENV) \
   $(BOOST_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIB) $(LIBSECP256K1) $(EVENT_LIBS)
-test_test_dogecoin_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+test_test_brrrfren_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 if ENABLE_WALLET
-test_test_dogecoin_LDADD += $(LIBBRRRCOIN_WALLET)
+test_test_brrrfren_LDADD += $(LIBBRRRFREN_WALLET)
 endif
 
-test_test_dogecoin_LDADD += $(LIBBRRRCOIN_CONSENSUS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS)
-test_test_dogecoin_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -static
+test_test_brrrfren_LDADD += $(LIBBRRRFREN_CONSENSUS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS)
+test_test_brrrfren_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -static
 
 if ENABLE_ZMQ
-test_test_dogecoin_LDADD += $(ZMQ_LIBS)
+test_test_brrrfren_LDADD += $(ZMQ_LIBS)
 endif
 #
 
-# test_bitcoin_fuzzy binary #
-test_test_dogecoin_fuzzy_SOURCES = test/test_bitcoin_fuzzy.cpp
-test_test_dogecoin_fuzzy_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
-test_test_dogecoin_fuzzy_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-test_test_dogecoin_fuzzy_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
+# test_brrrfren_fuzzy binary #
+test_test_brrrfren_fuzzy_SOURCES = test/test_brrrfren_fuzzy.cpp
+test_test_brrrfren_fuzzy_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
+test_test_brrrfren_fuzzy_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+test_test_brrrfren_fuzzy_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 
-test_test_dogecoin_fuzzy_LDADD = \
+test_test_brrrfren_fuzzy_LDADD = \
   $(LIBUNIVALUE) \
-  $(LIBBRRRCOIN_SERVER) \
-  $(LIBBRRRCOIN_COMMON) \
-  $(LIBBRRRCOIN_UTIL) \
-  $(LIBBRRRCOIN_CONSENSUS) \
-  $(LIBBRRRCOIN_CRYPTO) \
+  $(LIBBRRRFREN_SERVER) \
+  $(LIBBRRRFREN_COMMON) \
+  $(LIBBRRRFREN_UTIL) \
+  $(LIBBRRRFREN_CONSENSUS) \
+  $(LIBBRRRFREN_CRYPTO) \
   $(LIBSECP256K1)
 
-test_test_dogecoin_fuzzy_LDADD += $(BOOST_LIBS) $(CRYPTO_LIBS)
+test_test_brrrfren_fuzzy_LDADD += $(BOOST_LIBS) $(CRYPTO_LIBS)
 #
 
-nodist_test_test_dogecoin_SOURCES = $(GENERATED_TEST_FILES)
+nodist_test_test_brrrfren_SOURCES = $(GENERATED_TEST_FILES)
 
 $(BITCOIN_TESTS): $(GENERATED_TEST_FILES)
 
@@ -196,13 +196,13 @@ CLEANFILES += $(CLEAN_BITCOIN_TEST)
 # This file is problematic for out-of-tree builds if it exists.
 DISTCLEANFILES += test/buildenv.pyc
 
-dogecoin_test: $(TEST_BINARY)
+brrrfren_test: $(TEST_BINARY)
 
-dogecoin_test_check: $(TEST_BINARY) FORCE
+brrrfren_test_check: $(TEST_BINARY) FORCE
 	$(MAKE) check-TESTS TESTS=$^
 
-dogecoin_test_clean : FORCE
-	rm -f $(CLEAN_BITCOIN_TEST) $(test_test_dogecoin_OBJECTS) $(TEST_BINARY)
+brrrfren_test_clean : FORCE
+	rm -f $(CLEAN_BITCOIN_TEST) $(test_test_brrrfren_OBJECTS) $(TEST_BINARY)
 
 check-local:
 	@echo "Running test/bitcoin-util-test.py..."
