--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -2,16 +2,16 @@
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
-bin_PROGRAMS += bench/bench_dogecoin
+bin_PROGRAMS += bench/bench_brrrfren
 BENCH_SRCDIR = bench
-BENCH_BINARY = bench/bench_dogecoin$(EXEEXT)
+BENCH_BINARY = bench/bench_brrrfren$(EXEEXT)
 
 RAW_TEST_FILES = \
   bench/data/block413567.raw
 GENERATED_TEST_FILES = $(RAW_TEST_FILES:.raw=.raw.h)
 
-bench_bench_dogecoin_SOURCES = \
-  bench/bench_bitcoin.cpp \
+bench_bench_brrrfren_SOURCES = \
+  bench/bench_brrrfren.cpp \
   bench/bench.cpp \
   bench/bench.h \
   bench/checkqueue.cpp \
@@ -30,23 +30,23 @@ bench_bench_dogecoin_SOURCES = \
 #   bench/checkblock.cpp \        # disabled because this checks a specific bitcoin block
 #   bench/verify_script.cpp \     # disabled because this checks a segwit transaction
 
-nodist_bench_bench_dogecoin_SOURCES = $(GENERATED_TEST_FILES)
+nodist_bench_bench_brrrfren_SOURCES = $(GENERATED_TEST_FILES)
 
-bench_bench_dogecoin_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(EVENT_CLFAGS) $(EVENT_PTHREADS_CFLAGS) -I$(builddir)/bench/
-bench_bench_dogecoin_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
-bench_bench_dogecoin_LDADD = \
-  $(LIBBRRRCOIN_SERVER) \
-  $(LIBBRRRCOIN_COMMON) \
-  $(LIBBRRRCOIN_UTIL) \
-  $(LIBBRRRCOIN_CONSENSUS) \
-  $(LIBBRRRCOIN_CRYPTO) \
+bench_bench_brrrfren_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(EVENT_CLFAGS) $(EVENT_PTHREADS_CFLAGS) -I$(builddir)/bench/
+bench_bench_brrrfren_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
+bench_bench_brrrfren_LDADD = \
+  $(LIBBRRRFREN_SERVER) \
+  $(LIBBRRRFREN_COMMON) \
+  $(LIBBRRRFREN_UTIL) \
+  $(LIBBRRRFREN_CONSENSUS) \
+  $(LIBBRRRFREN_CRYPTO) \
   $(LIBLEVELDB) \
   $(LIBMEMENV) \
   $(LIBSECP256K1) \
   $(LIBUNIVALUE)
 
 if ENABLE_ZMQ
-bench_bench_dogecoin_LDADD += $(LIBBRRRCOIN_ZMQ) $(ZMQ_LIBS)
+bench_bench_brrrfren_LDADD += $(LIBBRRRFREN_ZMQ) $(ZMQ_LIBS)
 endif
 
 if ENABLE_WALLET
