--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -180,14 +180,12 @@ jobs:
         # Copy ALL required DLLs for Windows using a more reliable approach
         echo "Finding and copying all required DLLs..."
         
-        # Get the main executable to work with
-        MAIN_EXE=""
-        if [ -f src/dogecoind.exe ]; then
-          MAIN_EXE="src/dogecoind.exe"
-        elif [ -f src/brrrfrend.exe ]; then
-          MAIN_EXE="src/brrrfrend.exe"
+        # Check which binary was built
+        if [[ -f "src/poemd.exe" ]]; then
+          MAIN_EXE="src/poemd.exe"
+          echo "Found poemd.exe binary"
         else
-          echo "Could not find main executable"
+          echo "Error: No main binary found"
           exit 1
         fi
         
@@ -236,20 +234,11 @@ jobs:
         copy_dll_and_deps "$MAIN_EXE" "$DEST_DIR"
         
         # Also copy the dependencies of the CLI, TX, and Qt tools
-        if [[ "$MAIN_EXE" == *"dogecoind.exe" ]]; then
-          copy_dll_and_deps "${MAIN_EXE/dogecoind.exe/dogecoin-cli.exe}" "$DEST_DIR"
-          copy_dll_and_deps "${MAIN_EXE/dogecoind.exe/dogecoin-tx.exe}" "$DEST_DIR"
-          # Include Qt GUI wallet if it exists
-          if [[ -f "${MAIN_EXE/src\/dogecoind.exe/src/qt/dogecoin-qt.exe}" ]]; then
-            copy_dll_and_deps "${MAIN_EXE/src\/dogecoind.exe/src/qt/dogecoin-qt.exe}" "$DEST_DIR"
-          fi
-        elif [[ "$MAIN_EXE" == *"brrrfrend.exe" ]]; then
-          copy_dll_and_deps "${MAIN_EXE/brrrfrend.exe/brrrfren-cli.exe}" "$DEST_DIR"
-          copy_dll_and_deps "${MAIN_EXE/brrrfrend.exe/brrrfren-tx.exe}" "$DEST_DIR"
-          # Include Qt GUI wallet if it exists
-          if [[ -f "${MAIN_EXE/src\/brrrfrend.exe/src/qt/brrrfren-qt.exe}" ]]; then
-            copy_dll_and_deps "${MAIN_EXE/src\/brrrfrend.exe/src/qt/brrrfren-qt.exe}" "$DEST_DIR"
-          fi
+        copy_dll_and_deps "${MAIN_EXE/poemd.exe/poem-cli.exe}" "$DEST_DIR"
+        copy_dll_and_deps "${MAIN_EXE/poemd.exe/poem-tx.exe}" "$DEST_DIR"
+        # Include Qt GUI wallet if it exists
+        if [[ -f "${MAIN_EXE/src\/poemd.exe/src\/qt/poem-qt.exe}" ]]; then
+          copy_dll_and_deps "${MAIN_EXE/src\/poemd.exe/src\/qt/poem-qt.exe}" "$DEST_DIR"
         fi
         
         echo "All dependencies copied to $DEST_DIR"
@@ -291,11 +280,16 @@ jobs:
       shell: bash
 
     - name: Upload binaries to release
-      if: startsWith(github.ref, 'refs/tags/')
+      id: upload-release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          ${{ env.ASSET_NAME }}
-          ${{ env.ASSET_NAME }}.sha256
+          ${{ matrix.os == 'ubuntu-22.04' && 'brrrfren-linux-x64.tar.gz' || 'brrrfren-windows-x64.zip' }}
+          ${{ matrix.os == 'ubuntu-22.04' && 'brrrfren-linux-x64.tar.gz.sha256' || 'brrrfren-windows-x64.zip.sha256' }}
+        tag_name: ${{ github.ref_name }}
+        generate_release_notes: true
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: github.ref == 'refs/heads/rename2-working' || startsWith(github.ref, 'refs/tags/')
