--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -262,40 +262,64 @@ jobs:
         echo "=== DLLs included in package ==="
         ls -la dist/*.dll
 
+    - name: Filter out Dogecoin binaries
+      run: |
+        # Remove Dogecoin binaries from dist directory
+        cd dist
+        if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
+          # Linux binaries
+          rm -f dogecoind dogecoin-cli dogecoin-tx
+        else
+          # Windows binaries
+          rm -f dogecoind.exe dogecoin-cli.exe dogecoin-tx.exe
+        fi
+        echo "Filtered out Dogecoin binaries"
+        ls -la
+      shell: bash
+
     - name: Package binaries
+      id: package
       run: |
         if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
           cd dist
           tar -czf ../brrrfren-linux-x64.tar.gz *
           cd ..
-          echo "ASSET_NAME=brrrfren-linux-x64.tar.gz" >> $GITHUB_ENV
+          ASSET_NAME="brrrfren-linux-x64.tar.gz"
         else
           cd dist
           7z a ../brrrfren-windows-x64.zip *
           cd ..
-          echo "ASSET_NAME=brrrfren-windows-x64.zip" >> $GITHUB_ENV
+          ASSET_NAME="brrrfren-windows-x64.zip"
         fi
+        
+        # Set outputs for subsequent steps
+        echo "ASSET_NAME=$ASSET_NAME" >> $GITHUB_ENV
+        echo "asset_name=$ASSET_NAME" >> $GITHUB_OUTPUT
       shell: bash
 
     - name: Generate checksums
+      id: checksum
       run: |
-        if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
-          sha256sum brrrfren-linux-x64.tar.gz > brrrfren-linux-x64.tar.gz.sha256
-          echo "Checksum for brrrfren-linux-x64.tar.gz:"
-          cat brrrfren-linux-x64.tar.gz.sha256
-        else
-          sha256sum brrrfren-windows-x64.zip > brrrfren-windows-x64.zip.sha256
-          echo "Checksum for brrrfren-windows-x64.zip:"
-          cat brrrfren-windows-x64.zip.sha256
-        fi
+        ASSET="${{ steps.package.outputs.asset_name }}"
+        
+        # Generate checksum
+        sha256sum "$ASSET" > "$ASSET.sha256"
+        
+        # Output checksum for verification
+        echo "Checksum for $ASSET:"
+        cat "$ASSET.sha256"
+        
+        # Set outputs for the upload step
+        echo "checksum_path=$ASSET.sha256" >> $GITHUB_OUTPUT
       shell: bash
 
-    - name: Upload binaries to release
+    - name: Upload release assets
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          ${{ env.ASSET_NAME }}
-          ${{ env.ASSET_NAME }}.sha256
+          ${{ steps.package.outputs.asset_name }}
+          ${{ steps.checksum.outputs.checksum_path }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      id: upload-release
