--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -3,10 +3,12 @@ name: Build BrrrFren Wallets
 on:
   push:
     branches:
-      - rename2
-      - rename2-working
+      - poem-rename-cleanup
     tags:
       - 'v*.*.*'
+  pull_request:
+    branches:
+      - poem-rename-cleanup
 
 permissions:
   contents: write
