--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -329,11 +329,36 @@ jobs:
     # Upload to GitHub Releases for tags
     - name: Upload release assets
       if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        # Debug output
+        echo "Tag detected, preparing release"
+        echo "Asset name: ${{ steps.package.outputs.asset_name }}"
+        echo "Looking for files:"
+        ls -la
+        
+        # Set file variables based on OS
+        if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
+          ASSET="brrrfren-linux-x64.tar.gz"
+        else
+          ASSET="brrrfren-windows-x64.zip"
+        fi
+        
+        echo "Using asset: $ASSET"
+        echo "Asset exists: $(ls -la $ASSET)"
+        echo "Checksum exists: $(ls -la $ASSET.sha256)"
+      shell: bash
+      
+    - name: Create GitHub Release
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          ${{ steps.package.outputs.asset_name }}
-          ${{ steps.checksum.outputs.checksum_path }}
+          brrrfren-linux-x64.tar.gz
+          brrrfren-linux-x64.tar.gz.sha256
+          brrrfren-windows-x64.zip
+          brrrfren-windows-x64.zip.sha256
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       id: upload-release
