feat: Use wildcard matching for PoEM binaries to catch all variants

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -297,16 +297,21 @@ jobs:
           echo "=== Current directory structure ==="
           find . -type d | sort
           
-          # Look for PoEM binaries in common locations
-          echo "=== Looking for PoEM binaries ==="
-          find . -type f \( -name "poemd" -o -name "poem-cli" -o -name "poem-tx" \) -o -name "libpoem*.so*" | sort
+          # Look for all PoEM binaries and libraries, excluding build artifacts
+          echo "=== Looking for PoEM binaries and libraries ==="
+          find . -type f \
+            \( -name "poem*" ! -name "*.o" ! -name "*.a" ! -name "*.la" ! -name "*.lo" \) \
+            -o -name "libpoem*.so*" | sort
           
           # Create dist directory if it doesn't exist
           mkdir -p dist
           
-          # Copy PoEM binaries to dist directory
-          echo "=== Copying PoEM binaries to dist/ ==="
-          find . -type f \( -name "poemd" -o -name "poem-cli" -o -name "poem-tx" -o -name "libpoem*.so*" \) -exec cp -v {} dist/ \;
+          # Copy PoEM binaries and libraries to dist directory
+          echo "=== Copying PoEM files to dist/ ==="
+          find . -type f \
+            \( -name "poem*" ! -name "*.o" ! -name "*.a" ! -name "*.la" ! -name "*.lo" \) \
+            -o -name "libpoem*.so*" \
+            -exec cp -v {} dist/ \;
           
           # Verify what's in dist/
           echo "=== Contents of dist/ after copying ==="
@@ -332,16 +337,21 @@ jobs:
           echo "=== Current directory structure ==="
           find . -type d | sort
           
-          # Look for PoEM binaries in common locations
-          echo "=== Looking for PoEM binaries ==="
-          find . -type f \( -name "poemd.exe" -o -name "poem-cli.exe" -o -name "poem-tx.exe" \) -o -name "*.dll" | sort
+          # Look for all PoEM binaries and DLLs, excluding build artifacts
+          echo "=== Looking for PoEM binaries and DLLs ==="
+          find . -type f \
+            \( -name "poem*" ! -name "*.o" ! -name "*.a" ! -name "*.la" ! -name "*.lo" ! -name "*.obj" \) \
+            -o -name "*.dll" | sort
           
           # Create dist directory if it doesn't exist
           mkdir -p dist
           
-          # Copy PoEM binaries to dist directory
-          echo "=== Copying PoEM binaries to dist/ ==="
-          find . -type f \( -name "poemd.exe" -o -name "poem-cli.exe" -o -name "poem-tx.exe" -o -name "*.dll" \) -exec cp -v {} dist/ \;
+          # Copy PoEM binaries and DLLs to dist directory
+          echo "=== Copying PoEM files to dist/ ==="
+          find . -type f \
+            \( -name "poem*" ! -name "*.o" ! -name "*.a" ! -name "*.la" ! -name "*.lo" ! -name "*.obj" \) \
+            -o -name "*.dll" \
+            -exec cp -v {} dist/ \;
           
           # Verify what's in dist/
           echo "=== Contents of dist/ after copying ==="
